Bug 17947 - patches to avoid gcc warnings for libICE
Summary: patches to avoid gcc warnings for libICE
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/ICE (show other bugs)
Version: 7.3 (2007.09)
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-07 08:49 UTC by Peter Breitenlohner
Modified: 2008-10-07 13:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch to avoid gcc warnings for libICE (1015 bytes, patch)
2008-10-07 08:49 UTC, Peter Breitenlohner
no flags Details | Splinter Review
patch for libICE to avoid gcc warnings for libSM (2.14 KB, patch)
2008-10-07 08:58 UTC, Peter Breitenlohner
no flags Details | Splinter Review

Description Peter Breitenlohner 2008-10-07 08:49:57 UTC
Created attachment 19444 [details] [review]
patch to avoid gcc warnings for libICE

Attached are two small patches to avoid gcc warnings for libICE (V 1.0.4)
Comment 1 Peter Breitenlohner 2008-10-07 08:58:09 UTC
Created attachment 19446 [details] [review]
patch for libICE to avoid gcc warnings for libSM
Comment 2 Alan Coopersmith 2008-10-07 13:22:08 UTC
Applied both patches.   Thanks for submitting them.

commit a99fbad09ab850e65ddd57e4d4488e4726295e14
Author: Peter Breitenlohner <peb@mppmu.mpg.de>
Date:   Tue Oct 7 13:21:48 2008 -0700

    Constify some arguments in libICE to clear warnings in libSM
    
    This patch avoids the gcc (3.4.6) warnings:
     ../../libSM-1.0.3/src/sm_client.c:104: warning: passing arg 7 of `IceRegist
     ../../libSM-1.0.3/src/sm_manager.c:168: warning: passing arg 7 of `IceRegis
    when compiling libSM

commit 3bceaeb3192ca75a14854d614e1621d28fb82274
Author: Peter Breitenlohner <peb@mppmu.mpg.de>
Date:   Tue Oct 7 11:25:42 2008 -0700

    define macros to 1 in icetrans.c to avoid redefined macro warnings
    
    X.Org Bug #17947 <http://bugs.freedesktop.org/show_bug.cgi?id=17947>
    Patch #19444 <http://bugs.freedesktop.org/attachment.cgi?id=19444>
    
    Define as 1 (one) as done by autoconf and the command line
    option, e.g. -DICE_t, not as empty.
    
    This avoids the gcc (3.4.6) warnings:
     ../../libICE-1.0.4/src/icetrans.c:29:1: warning: "ICE_t" redefined
     ../config.h:38:1: warning: this is the location of the previous definition
     ../../libICE-1.0.4/src/icetrans.c:30:1: warning: "TRANS_CLIENT" redefined
     <command line>:6:1: warning: this is the location of the previous definitio
     ../../libICE-1.0.4/src/icetrans.c:31:1: warning: "TRANS_SERVER" redefined
     <command line>:7:1: warning: this is the location of the previous definitio



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.