define macros to 1 in icetrans.c to avoid redefined macro warnings

X.Org Bug #17947 <http://bugs.freedesktop.org/show_bug.cgi?id=17947>
Patch #19444 <http://bugs.freedesktop.org/attachment.cgi?id=19444>

Define as 1 (one) as done by autoconf and the command line
option, e.g. -DICE_t, not as empty.

This avoids the gcc (3.4.6) warnings:
 ../../libICE-1.0.4/src/icetrans.c:29:1: warning: "ICE_t" redefined
 ../config.h:38:1: warning: this is the location of the previous definition
 ../../libICE-1.0.4/src/icetrans.c:30:1: warning: "TRANS_CLIENT" redefined
 <command line>:6:1: warning: this is the location of the previous definition
 ../../libICE-1.0.4/src/icetrans.c:31:1: warning: "TRANS_SERVER" redefined
 <command line>:7:1: warning: this is the location of the previous definition